hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/xhp_attr_splat.php.exp
File "xhp_attr_splat.php", line 18, characters 24-25:
Expression trees do not support attribute spread syntax. (Parsing[1002])
